--- a/templates/main.html
+++ b/templates/main.html
@@ -24,6 +24,15 @@
   <script src="/static/main.js"></script>
 </head>
 <body>
+<form action="{{ upload_url }}" method="POST" enctype="multipart/form-data">
+  <label for="file">Upload a file</label>
+  <input type="file" name="file"><br> 
+  <label for="customFilename">Custom Filename?</label>
+  <input type="text" name="customFilename" value=""><br> 
+  <label for="description">Description</label>
+  <input type="text" name="description" value=""><br> 
+  <input type="submit" name="submit" value="Submit">
+</form>
 
 <section id="resourceFiles" class="page">
   <header>
@@ -51,13 +60,22 @@
 <script type="text/template" id="resource-template">
   <div class="resourceFile">
     <div class="display">
+      <span>File Name: </span>
       <span class="fileName"><%=name%></span>
-      <span><%=blobKey%></span>
-      <span class="resourceFile-destroy">destroy</span>
+      <span>Description: </span>
+      <span class="fileDescription"><%=description%></span>
+
+      <span class="fileKey"><%=blobKey%></span>
+
+      <span class="fileDestroy">destroy</span>
     </div>
     <div class="edit">
-      <input class="resourceFile-input" type="text" value="<%= name %>" />
+      <label for="updateName">File Name: </label>
+      <input class="updateName" name="updateName" type="text" value="<%= name %>" />
+      <label for="updateDescription">Description: </label>
+      <input class="updateDescription" name="updateDescription" type="text" value="<%= description %>" />
       <span><%=blobKey%></span>
+      <span class="close">Done</span>
     </div>
   </div>
 </script>
