can post solutions now

--- a/templates/main.html
+++ b/templates/main.html
@@ -106,14 +106,17 @@
     </div>
 
     <ul class="solutions-list">
-      foo
     </ul>
 
   </div>
 </script>
 
 <script type="text/template" id="solution-template">
-  <div>dave is cool</div>
+  <div class="solution">
+    <span>Cost: <%=cost%> Algorithm: <%=algorithm%> # Consumers: <%=consumers.length%></span>
+    <span class="">Details</span>
+    <span class="">Delete</span>
+  </div>
 
 </script>
 
