restructured js source

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,10 +33,6 @@
       overflow:scroll;
     }
   </style>
-  <script src="/static/jquery.min.js"></script>
-  <script src="/static/underscore.js"></script>
-  <script src="/static/backbone.js"></script>
-  <script src="/static/main.js"></script>
 </head>
 <body>
 
@@ -188,6 +184,13 @@
     </div>
   </section>
 </script>
+
+<script src="/static/jquery.min.js"></script>
+<script src="/static/underscore.js"></script>
+<script src="/static/backbone.js"></script>
+<script src="/static/models.js"></script>
+<script src="/static/views.js"></script>
+<script src="/static/main.js"></script>
 
 </body>
 </html>
