fixed major issue with optimize btn + race condition

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,11 +82,11 @@
       <span class="btn view-file-btn">View File</span>
     </div>
     <div class="edit">
-      <label for="updateName">File Name: </label>
-      <input class="updateName" name="updateName" type="text" value="<%= name %>" />
+      <label for="nameField">File Name: </label>
+      <input class="nameField" name="nameField" type="text" value="<%= name %>" />
       <br />
-      <label for="updateDescription">Description: </label>
-      <input class="updateDescription" name="updateDescription" type="text" value="<%= description %>" />
+      <label for="descField">Description: </label>
+      <input class="descField" name="descField" type="text" value="<%= description %>" />
       <br />
       <span class="close">Done</span>
       <br />
