can now delete solutions

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
       <br />
       <span class="close">Done</span>
       <br />
-      <span class="fileDestroy">destroy</span>
+      <span class="file-destroy">destroy</span>
     </div>
 
     <span class="btn opt-btn">Optimize</span>
@@ -125,7 +125,7 @@
   <div class="solution">
     <span>Cost: <%=cost%> Algorithm: <%=algorithm%> # Consumers: <%=consumers.length%></span>
     <span class="btn sol-details-btn">Details</span>
-    <span class="btn">Delete</span>
+    <span class="btn solution-destroy">Delete</span>
   </div>
 
 </script>
