--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
     <div class="optimize">
       <select name="algorithm">
         <option value="genetic">Genetic</option>
-        <option value="anneal">Simulated Annealing</option>
+        <option value="annealing">Simulated Annealing</option>
         <option value="hillclimb">Hill Climbing</option>
         <option value="random">Random</option>
       </select>
@@ -107,7 +107,7 @@
       <input class="consumersField" type="text" name="consumersField" placeholder="comma, seperated, list" />
       <span class="error consumersFieldError"></span>
       <br />
-      <button class="btn btn-success"><i class="icon-play-circle icon-white"></i> Do it!</button>
+      <button class="btn btn-success" data-loading-text="Optimizing..."><i class="icon-play-circle icon-white"></i> Do it!</button>
     </div>
     <!-- ------------------------------------- -->
 
